Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
CREATE TABLE t1 ( a char(25), b text); |
INSERT INTO t1 VALUES ('foo','bar'); |
|
|
SELECT SUM(b) OVER (PARTITION BY a), ROW_NUMBER() OVER (PARTITION BY b) |
FROM t1 |
GROUP BY LEFT((SYSDATE()), 'foo') WITH ROLLUP; |
|
10.2 54d0a55adf6fbfc92c5473b |
mysqld: /10.2/sql/sql_window.cc:322: int compare_order_elements(ORDER*, ORDER*): Assertion `item1->type() == Item::FIELD_ITEM && item2->type() == Item::FIELD_ITEM' failed.
|
190506 10:48:00 [ERROR] mysqld got signal 6 ;
|
|
|
linux/raise.c:54(__GI_raise)[0x7f70751d2428]
|
stdlib/abort.c:91(__GI_abort)[0x7f70751d402a]
|
assert/assert.c:92(__assert_fail_base)[0x7f70751cabd7]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f70751cac82]
|
sql/sql_window.cc:323(compare_order_elements(st_order*, st_order*))[0x558ae3b19362]
|
sql/sql_window.cc:361(compare_order_lists(SQL_I_List<st_order>*, SQL_I_List<st_order>*))[0x558ae3b19924]
|
sql/sql_window.cc:474(compare_window_funcs_by_window_specs(Item_window_func*, Item_window_func*, void*))[0x558ae3b1a0b5]
|
sql/sql_list.h:626(void bubble_sort<Item_window_func>(List<Item_window_func>*, int (*)(Item_window_func*, Item_window_func*, void*), void*))[0x558ae3b2719b]
|
sql/sql_window.cc:561(order_window_funcs_by_window_specs(List<Item_window_func>*))[0x558ae3b1a830]
|
sql/sql_window.cc:2897(Window_funcs_computation::setup(THD*, List<Item_window_func>*, st_join_table*))[0x558ae3b1ed34]
|
sql/sql_select.cc:2914(JOIN::make_aggr_tables_info())[0x558ae379498c]
|
sql/sql_select.cc:2233(JOIN::optimize_inner())[0x558ae378dd41]
|
sql/sql_select.cc:1116(JOIN::optimize())[0x558ae3783103]
|
sql/sql_select.cc:3806(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x558ae379c66b]
|
sql/sql_select.cc:376(handle_select(THD*, LEX*, select_result*, unsigned long))[0x558ae377bf4b]
|
sql/sql_parse.cc:6486(execute_sqlcom_select(THD*, TABLE_LIST*))[0x558ae37039e7]
|
sql/sql_parse.cc:3534(mysql_execute_command(THD*))[0x558ae36f0ddc]
|
sql/sql_parse.cc:8020(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x558ae370c14b]
|
sql/sql_parse.cc:1835(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x558ae36e77d5]
|
sql/sql_parse.cc:1387(do_command(THD*))[0x558ae36e4952]
|
sql/sql_connect.cc:1335(do_handle_one_connection(CONNECT*))[0x558ae3a0e146]
|
sql/sql_connect.cc:1242(handle_one_connection)[0x558ae3a0db4e]
|
perfschema/pfs.cc:1864(pfs_spawn_thread)[0x558ae4bbc1c8]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f7075e0f6ba]
|
x86_64/clone.S:111(clone)[0x7f70752a441d]
|
|
Attachments
Issue Links
- is duplicated by
-
MDEV-19659 [ERROR] mysqld got signal 11 (parent issue MDEV-19583)
-
- Closed
-
-
MDEV-28081 MariaDB SEGV issue
-
- Closed
-
- relates to
-
MDEV-15837 Assertion `item1->type() == Item::FIELD_ITEM && item2->type() == Item::FIELD_ITEM' failed in compare_order_elements function
-
- Closed
-
-
MDEV-26614 Crash in CTE for complex query
-
- Closed
-